# tierjobs

./: .gitignore  OVERHAUL.md  README.md  package.json
cloudflare/: README.md  package.json  schema.sql  setup.sh  tsconfig.json  wrangler.toml
cloudflare/data/: seed-companies.sql
cloudflare/scripts/: import-from-json.js  migrate-from-convex.js
cloudflare/src/: index.ts
cloudflare/src/durable-objects/: user-session.ts
cloudflare/src/routes/: chat.ts  companies.ts  jobs.ts  stats.ts
convex/: http.ts  jobs.ts
convex/_generated/: api.d.ts
scraper/: pyproject.toml
scraper/src/tierjobs_scraper/: __init__.py  classification.py  cli.py  convex_client.py  location.py  models.py
scraper/src/tierjobs_scraper/scrapers/: __init__.py  base.py  greenhouse.py  lever.py
scripts/: fix-domains.mjs  push-companies.mjs  seed-companies.mjs
shared/: companies.csv  tiers.json
web/: package.json
web/convex/: companies.ts  http.ts  jobs.ts  schema.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/companies/: page.tsx
web/src/app/companies/[slug]/: page.tsx
web/src/app/jobs/: page.tsx
web/src/app/jobs/[id]/: page.tsx
web/src/app/tier-list/: page.tsx
web/src/components/: ai-chat.tsx  company-card.tsx  featured-jobs.tsx  filter-bar.tsx  footer.tsx  header.tsx  job-card.tsx  job-list-live.tsx  job-list.tsx  jobs-page-client.tsx  stats-live.tsx  tier-badge.tsx  tier-list-maker.tsx
